<resources>
    <string name="app_name">EcoArts</string>
    <string name="castellano">Castellano</string>
    <string name="catala">Català</string>
    <string name="english">English</string>
    <string name="jugar">Jugar</string>
    <string name="ajustes">Ajustes</string>
    <string name="salir">Salir</string>
    <string name="confirmar_salir">¿Seguro que quieres salir?</string>
    <string name="logo_ecoarts">Logo EcoArts</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="contactar">Contactar</string>
    <string name="creditos">Créditos</string>
    <string name="version">Versión</string>
    <string name="musica">Música:</string>
    <string name="efectos">Efectos:</string>
    <string name="nivel">Nivel:</string>
    <string name="facil">Fácil</string>
    <string name="dificil">Difícil</string>
    <string name="selecPersonaje">Seleccionar personaje</string>
    <string name="nombreJugador">Nombre jugador</string>
    <string name="empezar">Empezar</string>
    <string name="creditos_cuerpo">
        Programadores:\n\n Xiaolin Jin Lin\n
        Devin Schlippe\n
        Oriol Miralles\n\n\n
        Con la colaboración del equipo de profesores del Centre d\'Estudis Politècnics de Barcelona.\n\n
        Primera versión realizada en diciembre de 2020 en el curso DAM2A grupo 1.
    </string>
    <string name="infoPersonaje">Información personaje</string>
    <string name="Abandonar">Abandonar partida</string>
    <string name="descripcion_activista">Descripción activista</string>
    <string name="nombre_activista">Nombre activista</string>
    <string name="tutorial">Tutorial</string>
    <string name="derrota">Derrota</string>
    <string name="derrota2">¡No te rindas, la próxima vez lo lograrás!</string>
    <string name="volver_menu">Volver al menú</string>
    <string name="victoria">¡Victoria!</string>
    <string name="victoria2">¡Muy bien, sigue así!</string>
    <string name="volver_mapa">Volver al mapa</string>
    <string name="abandonar_partida">¿Seguro que quieres abandonar la partida?</string>
    <string name="batalla">Batalla</string>
    <string name="debes_escribir_nombre">Debes de escribir un nombre</string>
    <string name="victoria3">¡HAS SALVADO A LA TIERRA!\n\n
        Con tus actos y sabiduría el mundo sigue siendo un espacio agradable para vivir para todas las espécies.
    </string>
    <string name="comenzar_batalla">Comenzar batalla</string>
    <string name="introduccuion_tutorial">
        Bienvenidos a ECOARTS\n
        donde te pondremos a prueba tus conocimientos sobre el medio ambiente.\n\n
        ¿Estás preparado para adentrarse en un mundo lleno de monstruos que quiere acabar con la tierra?\n\n
        ¡Si eres valiente dirás que si!\n
        Ánimos, el mundo te necesita.
    </string>
    <string name="tutorial_1">
        Primero debes de escribir un nombre y luego elegir un personaje.\n\n
        Puedes ver la información de cada personaje pulsando el icono azul,
        para seleccionar pulse el icono verde.\n\n
        Por último escoja un nivel:\n\n
        - Fácil => recuperarás vidas en cada mundo.\n
        - Difícil => solo recuperarás vidas después de la tercera batalla.\n
    </string>
    <string name="tutorial_2">
        En total hay 6 mundos y en cada mundo hay un monstruo diferente.\n\n
        ¡Si te quedas sin vidas no podrás seguir avanzando! ;)
    </string>
    <string name="tutorial_3">
        Tendrás como máximo 30 segundos para responder cada pregunta.\n\n
        Si respondes mal pierdes una vida, y si se te agota el tiempo sin responder también,\n
        así que ten mucho cuidado . . . ;)\n\n
        Si te quedas sin vida pierdes.\n\n
        Lee las preguntas con atención y responde con cabeza.\n\n
    </string>
    <string name="enhorabuena">¡Enhorabuena</string>
    <string name="introduccion">
        La Tierra está en peligro!\n
        Y es que en la Tierra han crecido unos monstruos creados por la especies humana que amenazan con acabar con el planeta tal y como lo conocemos hoy.\n\n
        Estos monstruos han sido creados involuntariamente por todos los hombres y mujeres a partir de nuestros actos diarios y rutinarios.\n
        Durante mucho tiempo no fuimos conscientes pero cada día hemos hecho crecer estos monstruos y ahora ya casi están fuera de control, pudiendo acabar con el planeta en cuestión de pocos años.\n\n
        Se conocen con el nombre de Inundación, Contaminación, Residuos, Plásticos, Desforestación y Energía Sucia y son los monstruos más peligrosos que han habitado nunca la Tierra.\n
        El problema es que no toda la humanidad está unida en luchar contra estos monstruos.\n\n
        Muchos políticos y grandes empresarios hacen mucho dinero dando de comer cada día a estas peligrosas criaturas a la vez que intentan encantar nuestra mente con sus
        productos para evitar que hagamos alguna cosa. Pero ya no queda más tiempo, y tú y solo tú, con tu sabiduría y tus actos puedes acabar con ellos y destruirlos para siempre y salvar
        al planeta para que continúe siendo un lugar habitable para todas las personas y animales que aún sobreviven.
    </string>
    <string name="ver_introduccion">Ver introducción</string>
    <string name="volver_ajustes">Volver ajustes</string>
    <string name="EncabezadoIntroduccion">Introducción</string>
    <string name="recuperar_vidas">
        Veo que te han quitado vidas estos miserables monstruos. . .\n\n
        ¡No te preocupes, acabas de recuperar las vidas que has perdido!\n\n
        ¡Ánimo, te falta poco para llegar a la meta!
    </string>
    <string name="ir_al_menu">Ir al menú</string>
</resources>