<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/paddingGrande"
    android:background="@drawable/bordes_redondos_secundario">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_margin="@dimen/marginPequeno"
        android:scaleType="centerInside"
        android:src="@drawable/tierra_corona"
        tools:ignore="contentDescription" />

    <TextView
        style="@style/TextViewEncabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/victoria"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/victoria2"
        style="@style/TextViewNormal" />
    <Button
        android:id="@+id/btnVolverMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_mapa"
        style="@style/BotonesBordesRedondeadosPrimarios"/>
</LinearLayout>