<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bordes_redondos_rojo"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/paddingGrande">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="@dimen/marginPequeno"
        android:scaleType="centerCrop"
        android:src="@drawable/tierra_triste"
        tools:ignore="contentDescription" />

    <TextView
        style="@style/TextViewEncabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/derrota"
        android:textColor="@android:color/white" />

    <TextView
        style="@style/TextViewNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/derrota2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnVolverMenu"
        style="@style/BotonesBordesRedondeadosPrimarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_menu" />
</LinearLayout>