<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdiomaActivity">

    <ImageView
        android:id="@+id/fondoGif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/fondo_principal"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btnVolver"
        style="@style/ImageButtonSinFondo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/volver"
        tools:ignore="contentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCastellano"
            style="@style/BotonesBordesRedondeadosPrimarios"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/castellano"
            android:text="@string/castellano" />

        <Button
            android:id="@+id/btnCatala"
            style="@style/BotonesBordesRedondeadosPrimarios"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/catala"
            android:text="@string/catala" />

        <Button
            android:id="@+id/btnEnglish"
            style="@style/BotonesBordesRedondeadosPrimarios"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/english"
            android:text="@string/english" />
    </LinearLayout>
</RelativeLayout>